--- a/data/xue2022boost.bib
+++ b/data/xue2022boost.bib
@@ -1,9 +1,7 @@
-@ARTICLE{9798770,
+@article{xue2022boosting,
+  title={Boosting Monocular 3D Human Pose Estimation with Part Aware Attention},
   author={Xue, Youze and Chen, Jiansheng and Gu, Xiangming and Ma, Huimin and Ma, Hongbing},
-  journal={IEEE Transactions on Image Processing}, 
-  title={Boosting Monocular 3D Human Pose Estimation with Part Aware Attention}, 
+  journal={IEEE Transactions on Image Processing},
   year={2022},
-  volume={},
-  number={},
-  pages={1-1},
-  doi={10.1109/TIP.2022.3182269}}
+  publisher={IEEE}
+}
